# SRDSKDemo

./: .env  .gitignore  .replit  README.md  app.json  main.py  movie_search_start_link.py  pyproject.toml  requirements.txt
bot/: __init__.py  __main__.py  config.py  utils.py
bot/plugins/: commands (1).py  commands.py  group_filter.py  start.py  website_start.py
