[tool.poetry]
name = "repl_nix_RK-Post-Search-Bot"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.3"
bs4 = "^0.0.1"
fuzzywuzzy = "^0.18.0"
motor = "^3.1.1"
Pyrogram = "^2.0.97"
python-dotenv = "^0.21.1"
telegraph = "^2.2.0"
aiofiles = "^22.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
